[gd_scene load_steps=23 format=3 uid="uid://ulupq25c7dy3"]

[ext_resource type="Script" path="res://scenes/gas_lamp.gd" id="1_i1yuc"]
[ext_resource type="ArrayMesh" uid="uid://bcek4on6kyojp" path="res://assets/models/tools/gas_lamp.tres" id="2_53st1"]
[ext_resource type="Material" uid="uid://hhvpp8s8gsqd" path="res://assets/models/gaslamp.tres" id="2_fv1ti"]
[ext_resource type="AudioStream" uid="uid://dqpuanc8fllfs" path="res://assets/sounds/sfx/gas_lamp_on.mp3" id="3_agvte"]
[ext_resource type="AudioStream" uid="uid://d3hbwtyliu1ci" path="res://assets/sounds/sfx/gas_lamp_on_loop.mp3" id="3_jdtk7"]
[ext_resource type="Material" uid="uid://dvup1364u66le" path="res://scenes/materials/metal.tres" id="3_ldoxc"]
[ext_resource type="AudioStream" uid="uid://ch6lk1no0pd5o" path="res://assets/sounds/sfx/gas_lamp_off.mp3" id="4_0w7bw"]
[ext_resource type="Script" path="res://scripts/classes/interaction_component.gd" id="8_1oqpt"]

[sub_resource type="Gradient" id="Gradient_18oco"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pt3h2"]
gradient = SubResource("Gradient_18oco")
fill = 1
fill_from = Vector2(0.535613, 0.527066)
fill_to = Vector2(0.968661, 0.851852)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tuwjd"]
transparency = 1
blend_mode = 1
shading_mode = 0
albedo_color = Color(0.622594, 0.345564, 0.0175739, 1)
albedo_texture = SubResource("GradientTexture2D_pt3h2")
albedo_texture_force_srgb = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_w663s"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2ar4f"]
curve = SubResource("Curve_w663s")

[sub_resource type="Curve" id="Curve_4hn5e"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.492188, 0.260377), 0.0, 0.0, 0, 0, Vector2(0.919271, 0.607547), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wj65h"]
curve = SubResource("Curve_4hn5e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fr5m7"]
angle_min = -39.1
angle_max = 55.9
velocity_pivot = Vector3(0, 1, 0)
direction = Vector3(0, 0, 0)
spread = 3.0
flatness = 1.0
initial_velocity_min = 17.7
initial_velocity_max = 247.78
angular_velocity_min = -214.46
angular_velocity_max = 288.52
velocity_limit_curve = SubResource("CurveTexture_wj65h")
gravity = Vector3(0, 1, 0)
scale_over_velocity_curve = SubResource("CurveTexture_2ar4f")

[sub_resource type="QuadMesh" id="QuadMesh_fl4fo"]
size = Vector2(0.03, 0.03)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rgq48"]
height = 0.3
radius = 0.0521055

[sub_resource type="Animation" id="Animation_0erm1"]
resource_name = "GasLampAnimation"
length = 2.0015
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.48353, -1.5708, -1.5708), Vector3(1.5708, -1.5708, -1.5708), Vector3(1.65806, -1.5708, -1.5708)]
}

[sub_resource type="Animation" id="Animation_00dwj"]
resource_name = "GasLampON"

[sub_resource type="Animation" id="Animation_voj86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e882d"]
_data = {
"GasLampAnimation": SubResource("Animation_0erm1"),
"GasLampON": SubResource("Animation_00dwj"),
"RESET": SubResource("Animation_voj86")
}

[node name="GasLamp" type="StaticBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_i1yuc")
active = false
min_value = 0.8
max_value = 2.5

[node name="Eje" type="Node3D" parent="."]
transform = Transform3D(0.00390608, 0, 0, 0, -1.414e-08, -0.00390608, 0, 0.00390608, -1.414e-08, 0, 0.304106, 0)

[node name="Hand_Gas_Lamp_002" type="MeshInstance3D" parent="Eje"]
transform = Transform3D(1, 0, 0, 0, 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, -161.982, 72.8491)
layers = 2
cast_shadow = 0
mesh = ExtResource("2_53st1")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_ldoxc")
surface_material_override/1 = ExtResource("2_fv1ti")

[node name="FireBeam2" type="GPUParticles3D" parent="Eje/Hand_Gas_Lamp_002"]
transform = Transform3D(-1, 2.1684e-18, 8.27662e-08, 9.54098e-18, 1, -2.77556e-16, -8.27662e-08, 0, -1, 0.0473868, 6.52631e-09, -12.6427)
layers = 2
material_override = SubResource("StandardMaterial3D_tuwjd")
cast_shadow = 0
emitting = false
amount = 15
amount_ratio = 0.7404
lifetime = 3.9
preprocess = 215.6
speed_scale = 17.9
local_coords = true
process_material = SubResource("ParticleProcessMaterial_fr5m7")
draw_pass_1 = SubResource("QuadMesh_fl4fo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("CylinderShape3D_rgq48")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10214, -0.00260109)
layers = 3
light_color = Color(1, 0.591041, 0.285807, 1)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
shadow_bias = 1.881
shadow_opacity = 0.45
shadow_blur = 0.0
distance_fade_enabled = true
omni_range = 8.085
omni_attenuation = 1.63

[node name="Timer" type="Timer" parent="."]
wait_time = 0.575083
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Eje/Hand_Gas_Lamp_002")
libraries = {
"": SubResource("AnimationLibrary_e882d")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_agvte")
attenuation_model = 3
volume_db = -1.139
bus = &"SFX"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jdtk7")
attenuation_model = 3
volume_db = 8.07
max_db = 6.0
bus = &"SFX"

[node name="AudioStreamPlayer3D3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_0w7bw")
attenuation_model = 3
volume_db = -1.104
bus = &"SFX"

[node name="InteractionComponent" type="Node" parent="." node_paths=PackedStringArray("mesh")]
script = ExtResource("8_1oqpt")
mesh = NodePath("../Eje/Hand_Gas_Lamp_002")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
